test/lattests/extensions/objects1/bad/inheritanceCycle2.lat
class a extends a {

}

int main(){return 0;}